# ryoko-history

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: example.dev.vars  tsconfig.config.json  tsconfig.json  tsconfig.worker.json
backend/src/: CloudflareModels.ts
cloudflare-backend/: README.md  tsconfig.fe-client.json
cloudflare-backend/migrations/meta/: _journal.json
cloudflare-backend/src/: main.ts
cloudflare-backend/src/db/: db.ts
frontend/: .env  .gitignore  README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.config.json  tsconfig.json  tsconfig.react.json  vite.config.ts  wrangler.toml
frontend/src/: env.ts  main.tsx  vite-env.d.ts
frontend/src/clients/: httpClient.ts
frontend/src/components/: Languages.ts  VacationForm.tsx  VideoPlayer.tsx  VoiceAgent.tsx
frontend/src/css/: index.css
frontend/src/routes/: __root.tsx  example.lazy.tsx  index.lazy.tsx
python-backend/: .gitignore  README.md  example.env  luma_video.py  main.py  package.json  pyproject.toml
python-backend/scripts/: luma_request.py
python-backend/src/: .gitignore  env.py  file_upload.py  languages.py  local_paths.py  luma_request.py  luma_video.py  main.py  openai_summary.py  text_speech.py  text_to_speech.py  video_postprocessing.py
python-backend/src/routes/: conversation.py  manual_test_apis.py
worker-backend/: drizzle.config.ts  eslint.config.js  package.json  tsconfig.tests.json  vitest.config.ts  wrangler.toml
worker-backend/migrations/: 0000_pink_deathstrike.sql
worker-backend/migrations/meta/: 0000_snapshot.json
worker-backend/src/: AppContext.ts  httpClient.ts
worker-backend/src/routers/: exampleRouter.ts
worker-backend/test/: exampleRouter.test.ts
(+2 files in other folders)
