[project]
dependencies = [
  "aiohttp>=3.10.10",
  "boto3>=1.35.57",
  "elevenlabs>=1.12.1",
  "fastapi[standard]>=0.115.4",
  "lumaai>=1.1.0",
  "openai>=1.54.3",
  "pillow>=11.0.0",
  "pydantic>=2.9.2",
  "python-multipart>=0.0.17",
  "ruff>=0.7.3",
  "starlette>=0.41.2",
  "uvicorn[standard]>=0.32.0",
]
# async boto3:
# "aioboto3>=13.2.0",
# "types-aioboto3[essential]>=13.2.0.post1",
description = "Add your description here"
name = "python-backend"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv]
dev-dependencies = [
  "boto3-stubs[essential]>=1.35.57",
]
